[package]
name = "lightchannel"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
rustfft = "6.0"
num-complex = "0.4"
plotters = "0.3"
rand = "0.8"
image = "0.24"
ffmpeg-next = "7.1.0"
bit-vec = "0.8.0"

[[bin]]
name = "video"
path = "src/video.rs"
