[package]
name = "lightchannel"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
rustfft = "6.0"
num-complex = "0.4"
plotters = "0.3"
rand = "0.8"
image = "0.25"
ffmpeg-next = "7.1.0"
bit-vec = "0.8.0"
crc = "3.2.1"
nokhwa = { git = "https://github.com/victormaximchuk19/nokhwa", branch = "0.10", features = [
    "input-native",
    "output-threaded",
    "input-avfoundation",
] }
lz4_flex = "0.11.3"
human_bytes = { version = "0.4", default-features = false }
humanize-duration = "0.0.6"
opencv = { version = "0.93.1", features = [
    "clang-runtime",
    "videoio",
    "highgui",
] }

[[bin]]
name = "video_signal"
path = "src/video_signal.rs"

[[bin]]
name = "stream_nokhwa"
path = "src/stream_nokhwa.rs"

[[bin]]
name = "compress"
path = "src/compress.rs"

[[bin]]
name = "video_capture_http_stream"
path = "src/video_capture_http_stream.rs"
